# bns_nurates

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTORS.txt  LICENSE.txt  Makefile  README.md  compare_eos.py  compute_GL_weights.cpp  constants.h  corrections.h  driver  driver.cpp  export.sh  export_thc.py  filereader.h  format_code.sh  issue_tracker.md  main.c  main.cpp  mwe.cpp  nu_elastic_scatt.h  nu_rates  nucfrmfac.h  parameters.h  perf.sh  point_check_cm.cpp  point_check_nm.cpp  rate  test_NRNR  test_eos.cpp  test_integration.cpp  test_kappa  test_kappa.cpp  weak_rates.h
Input/: nurates_WM copy.txt  nurates_copy.txt
Output/: nu_rates.txt
bindings/: bnsnurates.i  setup.py  test_bindings.py
ccsn_data/: abun1d00380.d
debug/: compare_codes.py  parameters.py  plot_FD_function.py  plot_NR_results.py  plot_WM.py  plot_WM_new.py  plot_em_integral.py  plot_em_profile.py  plot_eta_profile.py  plot_function.py  plot_integral.py  plot_integral_new.py  plot_integral_vs_n.py  plot_legendre_pieces.py  py_parameters.py  units.py
doc/: Doxyfile  pair_notes.tex  references.bib
eos_test/: Makefile  compare_eos.py  compare_sum_eos.py  compare_tables.py  generate_complete_table  generate_complete_table.cpp  generate_eta_table.cpp  generate_lep_table.cpp  plot_entropy.py  plot_eos.py  test_NR_steps  test_NR_steps.cpp  test_entropy.py  test_eos  test_eos.cpp  test_eos_accuracy  test_eos_accuracy.cpp  test_eos_performance  test_eos_performance.cpp  test_eos_performance_new  test_eos_performance_new.cpp  tmp1  tmp2
eos_test/compile/: test_eos_performance_new
eos_test/electrons/: generate_complete_table  generate_complete_table.cpp  generate_eta_table  generate_eta_table.cpp
eos_test/make_plots/: compare_NR_steps.py  compare_eos.py  compare_tables.py  test_timmes.py
eos_test/muons/: generate_complete_table  generate_complete_table.cpp  generate_eta_table  generate_eta_table.cpp
include/: bns_nurates.h  bns_nurates.hpp  constants.h  constants.hpp  distribution.h  distribution.hpp  eos.h  eos.hpp  fermi.hpp  fermi_integrals.h  formulas_beta_iso.hpp  functions.h  functions.hpp  integration.h  integration.hpp  kernel_beta_iso.hpp  kernel_brem.hpp  kernel_brem_BRT06.hpp  kernel_brem_GP19.hpp  kernel_brem_HR98.hpp  kernel_nes.hpp  kernel_pair.hpp  kernels.h  kernels.hpp  m1_opacities.hpp  nu_abs_em.hpp  nu_distrfunction.hpp  nu_elastic_scatt.hpp  nucfrmfac.hpp  opacities.h  opacities.hpp  parameters.hpp  spectral_function.hpp  weak_magnetism.h  weak_magnetism.hpp
include/GSL_code/: integration_GSL.h
include/eos/: FD_functions_GSL.h  complete_FG.h  eos_fermions.h  eos_radiation.h  find_eta_GSL.h  glag.h  gleg.h  gleg_old.h  interp_bis.h  test_baryons  test_baryons.cpp  test_glag.py  test_gleg.py
include/physics/: NN_brem.hpp  nu_abs_em.hpp  nu_elastic_scatt.hpp  nucfrmfac.hpp  weak_magnetism.hpp
include/tools/: digamma.h  fermi.hpp  fermi_integrals.h  gamma.hpp  gauss_wgts.h  integration.hpp  mnewt_2d.hpp  nu_distrfunction.hpp
input/: newrates_1.008e+01.txt
inputs/: pair_t_tabulated.txt  pair_t_tabulated_more_digits_log.txt
inputs/CCSN/: ccsn_1d.txt  thermo_points_with_neutrinos.txt
inputs/DD2_M12980-12980_M1_LR/: thermo_points.txt  thermo_points_with_neutrinos.txt
inputs/nurates_CCSN/: nurates_1.008E+01.txt  nurates_1.008E+01_dU.txt
plots/: opacities_plots.ipynb
python_bindings/: README.md  bns_nurates.i  bns_nurates_test.py  numpy.i  setup.py  test_bns_nurates.py
scripts/: plot_CCSN_distr_func.py  plot_m1_coeffs.py  plot_pair_t.py  plot_quadrature_convergence_integrated.py  plot_quadrature_convergence_spectral.py  plot_test_beta.py  test_brem_fischer_corr.py
source/: constants.h  constants_bis.h  fermi.h  integration.h  integration_GSL.h  integration_bis.h  nr_module_2d.h  nu_abs_em.h  nu_distrfunction.h  nu_elastic_scatt.h  nucfrmfac.h  parameters.h  spectral_function.h  spectral_function_GSL.h  weak_magnetism.h
source/eos/: FD_functions.h  complete_FG.h  complete_FG_GSL.h  eos_baryons.h  eos_fermions.h  eos_neutrinos.h  eos_radiation.h  find_eta.h  full_eos_module.h  glag_old.h  interp.h  test_baryons
source/tools/: NewtonRaphson.h  gamma.h
src/: bns_nurates.h  compute_GL_weights.cpp  constants.h  libnurates.h  libnurates.h.in  spectral_function.cpp
src/distribution/: distribution.h  distribution_opt_thick.c  distribution_opt_thick.cpp  distribution_opt_thin.c  distribution_opt_thin.cpp  distribution_total.c  distribution_total.cpp  opt_thick.c  opt_thin.c  total_distr_func.c
src/functions/: bessel.c  bessel.cpp  digamma.c  digamma.cpp  fermi.c  fermi_distr.c  fermi_distr.cpp  fermi_integrals.c  fermi_integrals.cpp  functions.h  gamma.c  gamma.cpp  lambert.c  lambert.cpp  m1matrix.c  m1matrix.cpp  mnewt.c  mnewt.cpp  mnewt_2d.c  safe_exp.c  safe_exp.cpp  theta.c  theta.cpp
src/integration/: integration.h  integration_quadrature_generate.c  integration_quadrature_integrate.c  integration_quadrature_integrate.cpp  integration_quadrature_integrate_kernels.c  integration_quadrature_integrate_kernels.cpp  integration_quadrature_intergate.c  integration_quadrature_io.c  integration_quadrature_io.cpp  integration_quadrature_schemes.c  integration_quadrature_schemes.cpp
src/opacities/: m1_opacities.c  m1_opacities.cpp  nu_abs_em.c  nu_abs_em_beta.c  nu_abs_em_beta.cpp  nu_abs_em_brem.c  nu_abs_em_brem.cpp  nu_abs_em_inelastic.c  nu_abs_em_nuclabs.c  nu_abs_em_pair.c  nu_abs_em_pair.cpp  nu_elastic_scatt.c  nu_grey_total.c  nu_scatt_iso.c  nu_scatt_iso.cpp  opacities.h
src/output/: outputs.h  outputs.hpp
src/physics/: NN_brem.cpp  nu_abs_em.cpp  nu_distrfunction.cpp  nu_distrfunction.h  nu_elastic_scatt.cpp  nucfrmfac.cpp  weak_magnetism.cpp
src/tools/: gamma.cpp  (+2 more)
tests/: compute_GL_weights.cpp  prova  prova.cpp  test_NNbrem.cpp  test_NRNR  test_NRNR.cpp  test_brem.c  test_gray_beta.c  test_integration  test_integration.cpp  test_kappa.cpp  test_m1_coeffs.c  test_pair.c  tests.h  tests.hpp  tests_integration.c  tests_quadrature.c
utils/: export_thc.py  format_code.sh  plot_test_beta.py  plot_test_iso.py  point_out.cpp
(+118 files in other folders)
